--- a/index.html
+++ b/index.html
@@ -19,6 +19,20 @@
           <li><a href="toh-6">Part 6</a></li>
         </ul>
       </li>
+      <li> Basics and Developer Guide (alphabetical order)
+        <ul>
+          <li><a href="architecture">Architecture</a></li>
+          <li><a href="attribute-directives">Attribute Directives</a></li>
+          <li><a href="dependency-injection">Dependency Injection</a></li>
+          <li><a href="displaying-data">Displaying Data</a></li>
+          <li><a href="forms">Forms</a></li>
+          <li><a href="hierarchical-dependency-injection">Hierarchical Dependency Injection</a></li>
+          <li><a href="pipes">Pipes</a></li>
+          <li><a href="server-communication">HTTP Client</a></li>
+          <li><a href="template-syntax">Template Syntax</a></li>
+          <li><a href="user-input">User Input</a></li>
+        </ul>
+      </li>
     </ul>
   </body>
 </html>
