Add links to component-styles and lifecycle-hooks
Note that these projects have been present for a while, though they
were missing `.docsync.json` files.

--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
         <ul>
           <li><a href="architecture">Architecture</a></li>
           <li><a href="attribute-directives">Attribute Directives</a></li>
+          <li><a href="component-styles">Component Styles</a></li>
           <li><a href="dependency-injection">Dependency Injection</a></li>
           <li><a href="displaying-data">Displaying Data</a></li>
           <li><a href="forms">Forms</a></li>
           <li><a href="hierarchical-dependency-injection">Hierarchical Dependency Injection</a></li>
+          <li><a href="lifecycle-hooks">Lifecycle Hooks</a></li>
           <li><a href="pipes">Pipes</a></li>
           <li><a href="server-communication">HTTP Client</a></li>
           <li><a href="template-syntax">Template Syntax</a></li>
