Add links to router and security apps

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
           <li><a href="hierarchical-dependency-injection">Hierarchical Dependency Injection</a></li>
           <li><a href="lifecycle-hooks">Lifecycle Hooks</a></li>
           <li><a href="pipes">Pipes</a></li>
+          <li><a href="router">Router</a></li>
+          <li><a href="security">Security</a></li>
           <li><a href="server-communication">HTTP Client</a></li>
           <li><a href="template-syntax">Template Syntax</a></li>
           <li><a href="user-input">User Input</a></li>
