--- a/index.html
+++ b/index.html
@@ -8,33 +8,33 @@
     <h1>Angular Examples</h1>
     <p>Dart code examples for <a href="https://webdev.dartlang.org/angular">webdev.dartlang.org/angular</a>:</p>
     <ul>
-      <li><a href="quickstart">QuickStart</a></li>
+      <li><a href="https://webdev.dartlang.org/examples/ng/doc/quickstart">QuickStart</a></li>
       <li> Tutorial
         <ul>
-          <li><a href="toh-1">Part 1</a></li>
-          <li><a href="toh-2">Part 2</a></li>
-          <li><a href="toh-3">Part 3</a></li>
-          <li><a href="toh-4">Part 4</a></li>
-          <li><a href="toh-5">Part 5</a></li>
-          <li><a href="toh-6">Part 6</a></li>
+          <li><a href="https://webdev.dartlang.org/examples/ng/doc/toh-1">Part 1</a></li>
+          <li><a href="https://webdev.dartlang.org/examples/ng/doc/toh-2">Part 2</a></li>
+          <li><a href="https://webdev.dartlang.org/examples/ng/doc/toh-3">Part 3</a></li>
+          <li><a href="https://webdev.dartlang.org/examples/ng/doc/toh-4">Part 4</a></li>
+          <li><a href="https://webdev.dartlang.org/examples/ng/doc/toh-5">Part 5</a></li>
+          <li><a href="https://webdev.dartlang.org/examples/ng/doc/toh-6">Part 6</a></li>
         </ul>
       </li>
       <li> Basics and Developer Guide (alphabetical order)
         <ul>
-          <li><a href="architecture">Architecture</a></li>
-          <li><a href="attribute-directives">Attribute Directives</a></li>
-          <li><a href="component-styles">Component Styles</a></li>
-          <li><a href="dependency-injection">Dependency Injection</a></li>
-          <li><a href="displaying-data">Displaying Data</a></li>
-          <li><a href="forms">Forms</a></li>
-          <li><a href="hierarchical-dependency-injection">Hierarchical Dependency Injection</a></li>
-          <li><a href="lifecycle-hooks">Lifecycle Hooks</a></li>
-          <li><a href="pipes">Pipes</a></li>
-          <li><a href="router">Router</a></li>
-          <li><a href="security">Security</a></li>
-          <li><a href="server-communication">HTTP Client</a></li>
-          <li><a href="template-syntax">Template Syntax</a></li>
-          <li><a href="user-input">User Input</a></li>
+          <li><a href="https://webdev.dartlang.org/examples/ng/doc/architecture">Architecture</a></li>
+          <li><a href="https://webdev.dartlang.org/examples/ng/doc/attribute-directives">Attribute Directives</a></li>
+          <li><a href="https://webdev.dartlang.org/examples/ng/doc/component-styles">Component Styles</a></li>
+          <li><a href="https://webdev.dartlang.org/examples/ng/doc/dependency-injection">Dependency Injection</a></li>
+          <li><a href="https://webdev.dartlang.org/examples/ng/doc/displaying-data">Displaying Data</a></li>
+          <li><a href="https://webdev.dartlang.org/examples/ng/doc/forms">Forms</a></li>
+          <li><a href="https://webdev.dartlang.org/examples/ng/doc/hierarchical-dependency-injection">Hierarchical Dependency Injection</a></li>
+          <li><a href="https://webdev.dartlang.org/examples/ng/doc/lifecycle-hooks">Lifecycle Hooks</a></li>
+          <li><a href="https://webdev.dartlang.org/examples/ng/doc/pipes">Pipes</a></li>
+          <li><a href="https://webdev.dartlang.org/examples/ng/doc/router">Router</a></li>
+          <li><a href="https://webdev.dartlang.org/examples/ng/doc/security">Security</a></li>
+          <li><a href="https://webdev.dartlang.org/examples/ng/doc/server-communication">HTTP Client</a></li>
+          <li><a href="https://webdev.dartlang.org/examples/ng/doc/template-syntax">Template Syntax</a></li>
+          <li><a href="https://webdev.dartlang.org/examples/ng/doc/user-input">User Input</a></li>
         </ul>
       </li>
     </ul>
